objects/vlocity_cmt__Interface_DRGeneric__c.object
<CustomObject>
    <description>Interface Object: Generic Vlocity Data Mapper interface object which can be used for staging data to be imported.</description>
    <fields>
        <fullName>vlocity_cmt__Column001__c</fullName>
        <label>Column001</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Column002__c</fullName>
        <label>Column002</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Column003__c</fullName>
        <label>Column003</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DRBundleName__c</fullName>
        <label>DR Custom Setting</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DRError__c</fullName>
        <description>Full error when processing.</description>
        <label>DR Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DRProgressData__c</fullName>
        <description>JSON of current progress processing item if using bulk processing methods</description>
        <label>DR Progress</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DRStatus__c</fullName>
        <description>Status after processing DR map.</description>
        <label>DR Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LargeData__c</fullName>
        <label>Large Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Vlocity Data Mapper Object Interface</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Data Mapper Object Interface</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>